example/envoy-xds.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8443 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: greeter }
          http_filters:
          - name: envoy.router
node:
  cluster: service_greeter
  id: nodeID

static_resources:
  clusters:
  - name: grpc-greeter
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    type: EDS
    eds_cluster_config:
      eds_config:
        api_config_source:
          api_type: GRPC
          cluster_names: [xds_cluster]  
  - name: xds_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    dns_lookup_family: "V4_ONLY"
    lb_policy: LEAST_REQUEST
    http2_protocol_options: {}
    load_assignment:
      cluster_name: "xds_cluster"
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: consul-xds
                  port_value: 18000
                  protocol: "TCP"
